<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dialog_title_rcs_service">Connect to mobile network</string>
    <string name="dialog_text_rcs_pdn_pref_roaming">Allow Rich Communications to connect to a mobile network? As you are roaming, this may result in significant charges.</string>
    <string name="dialog_text_rcs_pdn_pref_allow_always">Always allow</string>
    <string name="dialog_text_rcs_pdn_pref_allow_once">Allow once</string>
    <string name="dialog_text_rcs_pdn_pref_deny">Do not allow</string>
    <string name="dialog_text_rcs_config_msisdn_text">Rich Communications includes new features you can use to send and receive chat messages, pictures, videos, and sounds, as well as text messages, using your Internet connection. To register for these features, you must enter a phone number.</string>
    <string name="dialog_text_rcs_config_msisdn_title">New messaging features</string>
    <string name="dialog_text_rcs_pdn_pref_home">Allow data connection for RCS service?</string>
    <string name="dialog_text_rcs_config_accept">Accept</string>
    <string name="dialog_text_rcs_config_reject">Reject</string>
    <string name="dialog_text_rcs_config_yes">Yes</string>
    <string name="dialog_text_rcs_config_no">No</string>
    <string name="dialog_text_rcs_config_ok">OK</string>
    <string name="dialog_text_rcs_config_cancel">Cancel</string>
    <string name="dialog_text_rcs_config_otp_title">Enter OTP</string>
    <string name="toast_text_rcs_being_reconfigured">RCS is being reconfigured - IMS service will not be available until the reconfiguration is complete</string>
    <string name="adv_calling_noti_title">Advanced calling</string>
    <string name="adv_calling_noti">Advanced calling has been added.</string>
    <string name="regi_failed_msg_kt">Service registration failed. If this error persists even after rebooting the terminal, please contact the customer center.</string>
    <string name="regi_failed_msg_skt">Service registration failed. If this error persists even after rebooting the terminal, please contact the customer center.</string>
    <string name="regi_failed_msg_lgu">Unable to send/receive calls. Failed to register for VoLTE. Restart the device. If the problem continues, contact the customer service centre(%s)</string>
    <string name="app_name">IMS Service</string>
    <string name="account_label">Tmobile</string>
    <string name="PCSCF_DOMAIN">0</string>
    <string name="PCSCF_ADDRESS">1</string>
    <string name="PRIVATE_USER_ID">2</string>
    <string name="PUBLIC_USER_ID">3</string>
    <string name="LBO_PCSCF_ADDRESS">4</string>
    <string name="LBO_PCSCF_ADDRESS_TYPE">5</string>
    <string name="AMR_AUDIO_BITRATE">6</string>
    <string name="AMR_AUDIO_BITRATE_WB">7</string>
    <string name="SIP_SESSION_TIMER">8</string>
    <string name="SMS_FORMAT">9</string>
    <string name="SMS_OVER_IMS">10</string>
    <string name="SMS_WRITE_UICC">11</string>
    <string name="SIP_T1_TIMER">12</string>
    <string name="SIP_T2_TIMER">13</string>
    <string name="SIP_T4_TIMER">14</string>
    <string name="SIP_TA_TIMER">15</string>
    <string name="SIP_TB_TIMER">16</string>
    <string name="SIP_TC_TIMER">17</string>
    <string name="SIP_TD_TIMER">18</string>
    <string name="SIP_TE_TIMER">19</string>
    <string name="SIP_TF_TIMER">20</string>
    <string name="SIP_TG_TIMER">21</string>
    <string name="SIP_TH_TIMER">22</string>
    <string name="SIP_TI_TIMER">23</string>
    <string name="SIP_TJ_TIMER">24</string>
    <string name="SIP_TK_TIMER">25</string>
    <string name="CAP_CACHE_EXP">26</string>
    <string name="CAP_POLL_INTERVAL">27</string>
    <string name="SRC_THROTTLE_PUBLISH">28</string>
    <string name="SUBSCRIBE_MAX_ENTRY">29</string>
    <string name="LVC_BETA_SETTING">30</string>
    <string name="EAB_SETTING">31</string>
    <string name="AVAIL_CACHE_EXP">32</string>
    <string name="PREF_CSCF_PORT">33</string>
    <string name="FQDN_FOR_PCSCF">34</string>
    <string name="POLL_LIST_SUB_EXP">35</string>
    <string name="PUBLISH_TIMER">36</string>
    <string name="PUBLISH_TIMER_EXTEND">37</string>
    <string name="GZIP_FLAG">38</string>
    <string name="TIMER_VZW">39</string>
    <string name="T_DELAY">40</string>
    <string name="IMS_TEST_MODE">41</string>
    <string name="MIN_SE">42</string>
    <string name="DCN_NUMBER">43</string>
    <string name="SILENT_REDIAL_ENABLE">44</string>
    <string name="T_LTE_911_FAIL">45</string>
    <string name="PUBLISH_ERR_RETRY_TIMER">46</string>
    <string name="SPEAKER_DEFAULT_VIDEO">47</string>
    <string name="RINGING_TIMER">48</string>
    <string name="RINGBACK_TIMER">49</string>
    <string name="RTP_RTCP_TIMER">50</string>
    <string name="DOMAIN_PUI">51</string>
    <string name="URI_MEDIA_RSC_SERV_3WAY_CALL">52</string>
    <string name="PHONE_CONTEXT_URI">53</string>
    <string name="CAP_DISCOVERY">54</string>
    <string name="AMR_WB">55</string>
    <string name="SRC_AMR">56</string>
    <string name="SRC_AMR_WB">57</string>
    <string name="HD_VOICE">58</string>
    <string name="UDP_KEEP_ALIVE">59</string>
    <string name="AUDIO_RTP_PORT_START">60</string>
    <string name="AUDIO_RTP_PORT_END">61</string>
    <string name="VIDEO_RTP_PORT_START">62</string>
    <string name="VIDEO_RTP_PORT_END">63</string>
    <string name="AMR_WB_OCTET_ALIGNED">64</string>
    <string name="AMR_WB_BANDWITH_EFFICIENT">65</string>
    <string name="AMR_OCTET_ALIGNED">66</string>
    <string name="AMR_BANDWITH_EFFICIENT">67</string>
    <string name="H264_VGA">68</string>
    <string name="H264_QVGA">69</string>
    <string name="DTMF_WB">70</string>
    <string name="DTMF_NB">71</string>
    <string name="VOLTE_PREF_SERVICE_STATUS">72</string>
    <string name="SMS_PSI">73</string>
    <string name="DM_APP_ID">74</string>
    <string name="DM_USER_DISP_NAME">75</string>
    <string name="DM_CON_REF">76</string>
    <string name="PDP_CONTEXT_PREF">77</string>
    <string name="ICSI">78</string>
    <string name="ICSI_RSC_ALLOC_MODE">79</string>
    <string name="RSC_ALLOC_MODE">80</string>
    <string name="VOICE_DOMAIN_PREF_EUTRAN">81</string>
    <string name="VOICE_DOMAIN_PREF_UTRAN">82</string>
    <string name="IMS_VOICE_TERMINATION">83</string>
    <string name="REG_RETRY_BASE_TIME">84</string>
    <string name="REG_RETRY_MAX_TIME">85</string>
    <string name="PHONE_CONTEXT_PARAM">86</string>
    <string name="PHONE_CONTEXT_PUID">87</string>
    <string name="SS_DOMAIN_SETTING">88</string>
    <string name="SS_CONTROL_PREF">89</string>
    <string name="DM_POLLING_PERIOD">90</string>
    <string name="ICCID">91</string>
    <string name="CONF_FACTORY_URI">92</string>
    <string name="VOLTE_ENABLED">93</string>
    <string name="LVC_ENABLED">94</string>
    <string name="EAB_SETTING_BY_USER">95</string>
    <string name="VOLTE_ENABLED_BY_USER">96</string>
    <string name="LVC_ENABLED_BY_USER">97</string>
    <string name="USSD_CONTROL_PREF">98</string>
    <string name="EMERGENCY_CONTROL_PREF">99</string>
    <string name="UT_PDN">100</string>
    <string name="UT_APN_NAME">101</string>
    <string name="VOLTE_DOMAIN_UI_SHOW">102</string>
    <string name="SMS_DOMAIN_UI_SHOW">103</string>
    <string name="UT_APN_SETTING_UI_SHOW">104</string>
    <string name="CONF_FACTORY_URI_SHOW">105</string>
    <string name="TVOLTE_HYS_TIMER">106</string>
    <string name="PIP">107</string>
    <string name="H264_L_VGA">108</string>
    <string name="SHOW_REG_INFO_TO_SETTING_APP">109</string>
    <string name="EPDG_ENABLED">110</string>
    <string name="EHRPD_ENABLED">111</string>
    <string name="SS_CSFB_WITH_IMSERROR">112</string>
    <string name="IMS_ENABLED">113</string>
    <string name="VZW_EAB_PUBLISH_FAIL">114</string>
    <string name="VZW_EAB_MENU_SHOW">115</string>
    <string name="H263_QCIF">116</string>
    <string name="SHOW_VOWIFI_REGI_ICON">119</string>
    <string name="VOWIFI_SUPPORTED">122</string>
    <string name="EPDG_HANDOVER_ENABLED">123</string>
    <string name="TWWAN_911_FAIL_TIMER">125</string>
    <string name="TWLAN_911_CALLFAIL_TIMER">127</string>
    <string name="VCE_CONFIG">128</string>
    <string name="VWF_ENABLED">133</string>
    <string name="EPDG_THLTE1">134</string>
    <string name="EPDG_THLTE2">135</string>
    <string name="EPDG_THLTE3">136</string>
    <string name="SPR_IMS_PUID1">143</string>
    <string name="SPR_IMS_PUID2">144</string>
    <string name="SPR_IMS_PUID3">145</string>
    <string name="SPR_IMS_PUID4">146</string>
    <string name="SPR_IMS_PUID5">147</string>
    <string name="SPR_IMS_ALPHA_ID">148</string>
    <string name="SPR_IMS_PARAM_IND">149</string>
    <string name="SPR_IMS_TPDA">150</string>
    <string name="SPR_IMS_TPSCA">151</string>
    <string name="SPR_IMS_TPPID">152</string>
    <string name="SPR_IMS_TPDCS">153</string>
    <string name="SPR_IMS_TPVP">154</string>
    <string name="SPR_IMS_PCSCF_ADDR_TYPE">155</string>
    <string name="SPR_IMS_NVISIM">156</string>
    <string name="SMSC_SET">157</string>
</resources>
