<?xml version="1.0" encoding="utf-8"?>
<configurations>
    <configuration name="default">
        <item key="@string/IMS_TEST_MODE">0</item>
        <item key="@string/LVC_ENABLED">1</item>
        <item key="@string/VOLTE_ENABLED">1</item>
        <item key="@string/EAB_SETTING">1</item>
        <item key="@string/SMS_OVER_IMS">1</item>
        <item key="@string/T_DELAY">5</item>
        <item key="@string/TIMER_VZW">6</item>
        <item key="@string/TVOLTE_HYS_TIMER">60</item>
        <item key="@string/SILENT_REDIAL_ENABLE">1</item>
        <item key="@string/VZW_EAB_PUBLISH_FAIL">1</item>
        <item key="@string/SHOW_REG_INFO_TO_SETTING_APP">1</item>
        <item key="@string/POLL_LIST_SUB_EXP">30</item>
    </configuration>
    <configuration name="ATT">
        <item key="@string/VOWIFI_SUPPORTED">1</item>
        <item key="@string/EPDG_HANDOVER_ENABLED">1</item>
    </configuration>
    <configuration name="TMB">
        <item key="@string/VOWIFI_SUPPORTED">1</item>
        <item key="@string/EPDG_HANDOVER_ENABLED">1</item>
        <item key="@string/POLL_LIST_SUB_EXP">30</item>
    </configuration>
    <configuration name="TMK">
        <item key="@string/VOWIFI_SUPPORTED">1</item>
        <item key="@string/EPDG_HANDOVER_ENABLED">1</item>
    </configuration>
    <configuration name="VZW">
        <item key="@string/PCSCF_DOMAIN">vzims.com</item>
        <item key="@string/PCSCF_ADDRESS">2600:80d:1::10:161:44:a2</item>
        <item key="@string/PHONE_CONTEXT_URI">phone-context=vzims.com</item>
        <item key="@string/IMS_TEST_MODE">0</item>
        <item key="@string/PREF_CSCF_PORT">1</item>
        <item key="@string/FQDN_FOR_PCSCF">0</item>
        <item key="@string/SIP_T1_TIMER">3000</item>
        <item key="@string/SIP_T2_TIMER">16000</item>
        <item key="@string/SIP_TF_TIMER">30000</item>
        <item key="@string/DOMAIN_PUI">vzims.com</item>
        <item key="@string/URI_MEDIA_RSC_SERV_3WAY_CALL">sip:confserver@vzims.com</item>
        <item key="@string/SIP_SESSION_TIMER">300</item>
        <item key="@string/MIN_SE">300</item>
        <item key="@string/AMR_WB">1</item>
        <item key="@string/SRC_AMR">1</item>
        <item key="@string/SRC_AMR_WB">1</item>
        <item key="@string/AMR_AUDIO_BITRATE">7</item>
        <item key="@string/AMR_AUDIO_BITRATE_WB">2</item>
        <item key="@string/RINGING_TIMER">55</item>
        <item key="@string/RINGBACK_TIMER">60</item>
        <item key="@string/RTP_RTCP_TIMER">10</item>
        <item key="@string/HD_VOICE">0</item>
        <item key="@string/UDP_KEEP_ALIVE">30</item>
        <item key="@string/LVC_BETA_SETTING">1</item>
        <item key="@string/PUBLISH_TIMER">1200</item>
        <item key="@string/PUBLISH_TIMER_EXTEND">86400</item>
        <item key="@string/CAP_CACHE_EXP">7776000</item>
        <item key="@string/AVAIL_CACHE_EXP">60</item>
        <item key="@string/SRC_THROTTLE_PUBLISH">60</item>
        <item key="@string/CAP_POLL_INTERVAL">625000</item>
        <item key="@string/SUBSCRIBE_MAX_ENTRY">100</item>
        <item key="@string/CAP_DISCOVERY">1</item>
        <item key="@string/GZIP_FLAG">1</item>
        <item key="@string/SPEAKER_DEFAULT_VIDEO">1</item>
        <item key="@string/PUBLISH_ERR_RETRY_TIMER">21600</item>
        <item key="@string/T_LTE_911_FAIL">20</item>
        <item key="@string/DCN_NUMBER">4437501000</item>
        <item key="@string/POLL_LIST_SUB_EXP">30</item>
        <item key="@string/TVOLTE_HYS_TIMER">60</item>
        <item key="@string/SMS_FORMAT">3GPP2</item>
        <item key="@string/SMS_OVER_IMS">1</item>
        <item key="@string/T_DELAY">5</item>
        <item key="@string/TIMER_VZW">6</item>
        <item key="@string/SILENT_REDIAL_ENABLE">1</item>
        <item key="@string/VZW_EAB_PUBLISH_FAIL">1</item>
        <item key="@string/VOWIFI_SUPPORTED">1</item>
        <item key="@string/EPDG_HANDOVER_ENABLED">1</item>
        <item key="@string/VCE_CONFIG">0</item>
        <item key="@string/VOLTE_ENABLED">0</item>
        <item key="@string/LVC_ENABLED">0</item>
        <item key="@string/EAB_SETTING">0</item>
        <item key="@string/VWF_ENABLED">1</item>
        <item key="@string/EPDG_THLTE1">-117</item>
        <item key="@string/EPDG_THLTE2">-115</item>
        <item key="@string/EPDG_THLTE3">-110</item>
        <item key="@string/TWWAN_911_FAIL_TIMER">40</item>
        <item key="@string/TWLAN_911_CALLFAIL_TIMER">20</item>
        <item key="@string/SMS_FORMAT">3GPP2</item>
    </configuration>
    <configuration name="SPR">
        <item key="@string/SHOW_REG_INFO_TO_SETTING_APP">0</item>
        <item key="@string/VOWIFI_SUPPORTED">1</item>
        <item key="@string/VWF_ENABLED">1</item>
        <item key="@string/EPDG_HANDOVER_ENABLED">0</item>
        <item key="@string/PRIVATE_USER_ID">&lt;mdn>@vowifi2.ims.spcsdns.net</item>
        <item key="@string/PUBLIC_USER_ID">sip:&lt;mdn>@vowifi2.ims.spcsdns.net</item>
        <item key="@string/PCSCF_DOMAIN">vowifi2.ims.spcsdns.net</item>
        <item key="@string/PCSCF_ADDRESS">pcscf.vowifina.spcsinfra.net</item>
        <item key="@string/SMS_PSI">sip:ipsmgw@ipsmgw.ims.spcsdns.net</item>
    </configuration>
    <configuration name="RWC">
        <item key="@string/EAB_SETTING">0</item>
        <item key="@string/VOWIFI_SUPPORTED">1</item>
        <item key="@string/EPDG_HANDOVER_ENABLED">1</item>
        <item key="@string/SHOW_VOWIFI_REGI_ICON">1</item>
    </configuration>
    <configuration name="FMC">
        <item key="@string/EAB_SETTING">0</item>
        <item key="@string/VOWIFI_SUPPORTED">1</item>
        <item key="@string/EPDG_HANDOVER_ENABLED">1</item>
        <item key="@string/SHOW_VOWIFI_REGI_ICON">1</item>
    </configuration>
    <configuration name="RWW">
        <item key="@string/VOWIFI_SUPPORTED">1</item>
        <item key="@string/EPDG_HANDOVER_ENABLED">1</item>
        <item key="@string/SHOW_VOWIFI_REGI_ICON">1</item>
    </configuration>
    <configuration name="TLA">
        <item key="@string/LVC_ENABLED">0</item>
    </configuration>
    <configuration name="BMC">
        <item key="@string/POLL_LIST_SUB_EXP">60</item>
    </configuration>
    <configuration name="BMR">
        <item key="@string/POLL_LIST_SUB_EXP">60</item>
    </configuration>
    <configuration name="USC">
        <item key="@string/VOICE_DOMAIN_PREF_EUTRAN">0</item>
    </configuration>
</configurations>